# fastapi_test

./: pyproject.toml
fastapi_test/: main.py
tests/: test_fastapi.py
