[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Muhammad Saleh Saqib <salehsaqib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
pytest = "^8.3.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
